@@ -1,3 +1,13 @@
+2008-05-05  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
+	(bacon_video_widget_open_with_subtitle):
+	* src/backend/bacon-video-widget-xine.c
+	(bacon_video_widget_open_with_subtitle): Fix possible warnings
+	when the URL doesn't have any local paths. Remove some useless
+	condition in the GStreamer backend, there was no MRL, we remove it a
+	few lines before
+
 2008-05-04  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/video-utils.c (totem_display_is_local):
